--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -38,6 +40,9 @@
 
         <activity
             android:name=".duplicate_main"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Filesearch"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
